XSPEC: Model fitting

--- a/XSPEC_Tutorials/XSPEC.ipynb
+++ b/XSPEC_Tutorials/XSPEC.ipynb
@@ -113,16 +113,72 @@
     "    To rescale y-axis, use the command `set command r y` and to remove the background plot, use the command `setplot noback`.\n",
     "\n",
     "Once this is done, the file should look like this:\n",
-    "\n",
-    "<img src=\"Images/2_Energy_BG.png\" alt=\"plot\" style=\"width:40%;\">\n"
+    "<p align=\"center\">\n",
+    "    <img src=\"Images/2_Energy_BG.png\" alt=\"plot\" style=\"width:40%;\">\n",
+    "</p>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Choosing the model and fitting the data"
+    "## Choosing the model and fitting the data\n",
+    "\n",
+    "XSPEC has a large number of predefined models. To see the list of models, use the command `model` or `mo`. There are three types of models: `additive`, `multiplicative`, and `other`. The `additive` models are added to the source spectrum, the `multiplicative` models are multiplied to the source spectrum, and the `other` models are convolution models, Mixin models, and Pile-up models.\n",
+    "\n",
+    "1. For example, to use the power-law model, use the command \n",
+    "    ```bash\n",
+    "    mo TBabs*po\n",
+    "    ```\n",
+    "    Here, `TBabs` is the absorption model and `po` is the power-law model. The model `TBabs` requires the Hydrogen column density ($nH$) as a parameter in the units of $10^{22} cm^{-2}$. \n",
+    "\n",
+    "    <div class=\"alert alert-block alert-info\">\n",
+    "    <b>nH value:</b>\n",
+    "    <br> If the value of nH is unknown, use the command \"nh\" to find the value for a given RA and DEC.\n",
+    "    </div>\n",
+    "\n",
+    "2. When the command `mo TBabs*po` is executed, input the values of the parameters such as `nH`, `phoindex`, `norm`. To freeze a parameter, add -1 at the end of the parameter value. Once the values are input, a summary of the model is displayed.\n",
+    "\n",
+    "3. Use the command `query yes` to ensure the fitting continues without any questions being asked. Use the command `renorm` to adjust the normalization of the model to the data which is chosen to minimize the fit statistic.\n",
+    "\n",
+    "4. To fit the data, use the command `fit`. One can also add number of iterations to the fit command to get a better fit. For example, `fit 100` will fit the data 100 times. Once the fit is performed, the output shows the best-fit parameters and the fit statistic. The reduced $\\chi^2$ value for this fit is more than 2 and thus it is not a good fit.\n",
+    "\n",
+    "5. To plot the model along with the residual plot, use the command \n",
+    "    ```bash\n",
+    "    plot ldata delchi\n",
+    "    ```\n",
+    "    The output will look like this:\n",
+    "\n",
+    "    <p align=\"center\">\n",
+    "        <img src=\"Images/3_Data_Model_delchi.png\" alt=\"plot\" style=\"width:40%;\">\n",
+    "    </p>\n",
+    "\n",
+    "6. If the fit is not good, one can change the model or the parameters and refit the data. To add a new component to the model, such as a gaussian line, use the command \n",
+    "    ```bash \n",
+    "    addcomp 2 gaussian\n",
+    "    ```\n",
+    "    Here 2 refers to adding this gaussian to the second model which was powerlaw. Add the input parameters for the gaussian model and fit the data again. In the previous image, one can see the gaussian line needs to be added at around 0.7 keV and 2.5 kev. Once they are added, the model will be described as `TBabs*(po+gaussian+gaussian)` and the fit looks like this:\n",
+    "    <p align=\"center\">\n",
+    "        <img src=\"Images/4_Data_Gauss_Model_delchi.png\" alt=\"plot\" style=\"width:40%;\">\n",
+    "    </p>\n",
+    "\n",
+    "    This has reduce $\\chi^2$ value of 1.33 and this can be used to calculate errors on the parameters.\n",
+    "\n",
+    "7. To calculate the errors on the parameters, use the command `error 1.0 2`. This will calculate the errors on the parameter 2 with 1 sigma confidence level. \n",
+    "\n",
+    "8. To save the fit results in a file, use the command `save all <file_name>`. This will save the fit results in a file with the name `file_name` in the current directory.\n",
+    "\n",
+    "9. To calculate the flux of the source, use the command \n",
+    "    ```bash\n",
+    "    flux 0.3 7\n",
+    "    ``` \n",
+    "    This will calculate the flux of the source between 0.3-7 keV."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
