XSPEC: BG Spectrum modeling

--- a/XSPEC_Tutorials/XSPEC.ipynb
+++ b/XSPEC_Tutorials/XSPEC.ipynb
@@ -110,7 +110,7 @@
     "    setplot background\n",
     "    plot ldata\n",
     "    ```\n",
-    "    To rescale y-axis, use the command `set command r y` and to remove the background plot, use the command `setplot noback`.\n",
+    "    To rescale y-axis, use the command `setplot command r y` and to remove the background plot, use the command `setplot noback`.\n",
     "\n",
     "Once this is done, the file should look like this:\n",
     "<p align=\"center\">\n",
@@ -178,7 +178,91 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Background modeling\n",
+    "\n",
+    "To account for the background in the source spectrum, one can used the extracted background spectrum to model the background. Instead of subtracting the background from the source spectrum, one can model the background and fit the source spectrum along with the background model. \n",
+    "\n",
+    "Background here consists of two components: astrophysical background and instrumental background. The astrophysical background consists of the following components:\n",
+    "1. Local Hot Bubble (LHB) which is a low temperature plasma in the solar neighborhood and is represented by a collisionally ionized diffuse gas model called `apec`.\n",
+    "2. Galactic Halo (GH) which is a hot plasma in the Galactic halo and is represented by an absorbed `apec` model (`TBabs*apec`).\n",
+    "3. Cosmic X-ray Background (CXB) which is the unresolved X-ray emission from all extragalactic sources such as AGNs and is represented by an absorbed power-law model (`TBabs*po`).\n",
+    "This gives the model for the astrophysical background as `TBabs*(apec+po)+apec`.\n",
+    "\n",
+    "The instrumental background consists of the following components:\n",
+    "1. Particle induced background (PIB) which is the background due to the particles hitting the detector and is represented by a power-law model.\n",
+    "2. Fluorescent lines which are the lines due to the fluorescence of the detector material and are represented by a gaussian model.\n",
+    "The model for the instrumental background is obtained from the Filter Wheel Closed (FWC) data and is available on the eROSITA website. The model for the instrumental background is represented as a combination of 23 gaussian lines, one power-law model, and `expfac(bkn2pow + powerlaw + powerlaw)`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To model the background, start with loading the background spectrum as a source spectrum using the command `data <background_file>`.\n",
+    "\n",
+    "1. Use the following command to model the astrophysical background. \n",
+    "    ```bash\n",
+    "    mo TBabs*(apec+po)+apec\n",
+    "    ```\n",
+    "2. Save the model using the command `save all <file_name.xcm>`. This will save the model as well as the information about the input file in the file `file_name.xcm` in the current directory. The model will look like this:\n",
+    "    ```bash\n",
+    "    model  TBabs(apec + powerlaw) + apec \n",
+    "       0.409637      0.001          0          0     100000      1e+06\n",
+    "       0.296085       0.01      0.008      0.008         64         64\n",
+    "       ...\n",
+    "    ```\n",
+    "\n",
+    "3. Copy and paste the model from the FWC data file into this file such that your model looks like this:\n",
+    "    ```bash\n",
+    "    model TBabs(apec + powerlaw) + apec + gaussian + gaussian + gaussian + gaussian + gaussian + gaussian + gaussian + gaussian + gaussian + gaussian + gaussian + gaussian + gaussian + gaussian + expfac(bkn2pow + powerlaw + powerlaw) + gaussian + powerlaw + gaussian + gaussian + gaussian + gaussian + gaussian + gaussian + gaussian + gaussian\n",
+    "       0.409637      0.001          0          0     100000      1e+06\n",
+    "       0.296085       0.01      0.008      0.008         64         64\n",
+    "       ...\n",
+    "        9.49841       0.01       9.45        9.5        9.7        9.8\n",
+    "         0.0001      -0.05          0          0         10         20\n",
+    "      0.0018608       0.01          0          0      1e+20      1e+24\n",
+    "       ...\n",
+    "    ```\n",
+    "\n",
+    "4. Load the model using the command `@<file_name.xcm>`. This will load the model into the XSPEC environment.\n",
+    "\n",
+    "5. Perform the fit using the command `fit 100` if necessary. Once the fit is done, the output will show the best-fit parameters and the reduced $\\chi^2$ value. \n",
+    "\n",
+    "6. To plot the model along with its components use the command \n",
+    "    ```bash\n",
+    "    setplot energy\n",
+    "    setplot add\n",
+    "    plot ldata \n",
+    "    iplot\n",
+    "    PLT> rescale y 1e-4 100\n",
+    "    PLT> col 2 on 2\n",
+    "    PLT> plot\n",
+    "    ```\n",
+    "    The later commands are used to rescale the y-axis and change the color of the final model to red.\n",
+    "\n",
+    "The output will look like this:\n",
+    "    <p align=\"center\">\n",
+    "        <img src=\"Images/5_BG_Modeling.png\" alt=\"plot\" style=\"width:40%;\">\n",
+    "    </p>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use this background model and its parameters when modeling source spectrum. \n",
+    "For ease of use, this part has been done using the python package `PyXspec` which is a python implementation of XSPEC. PyXspec tutorial on how to fit and model the data can be found at [PyXSPEC.ipynb](PyXSPEC.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "<b>Important note:</b> This tutorial is a brief introduction to XSPEC and its functionalities. It is prepared to understand basics of the software. The methods described here are not exhaustive and definitely requires better implementation for a more accurate and precise analysis.\n",
+    "</div>"
+   ]
   }
  ],
  "metadata": {
