XSPEC: Minor updates to the format

--- a/XSPEC_Tutorials/XSPEC.ipynb
+++ b/XSPEC_Tutorials/XSPEC.ipynb
@@ -12,7 +12,10 @@
    "metadata": {},
    "source": [
     "XSPEC is part of the NASA HEASoft software suit. It is a command driven, interactive, X-ray spectral fitting program with lots of models pre defined.\n",
-    "https://heasarc.gsfc.nasa.gov/docs/xanadu/xspec/manual/index.html"
+    "\n",
+    "<div class=\"alert alert-block alert-danger\">\n",
+    "<b>Important note:</b> This tutorial is a brief introduction to XSPEC and its functionalities. It is prepared to understand basics of the software. The methods described here are not exhaustive and definitely requires better implementation for a more accurate and precise analysis.\n",
+    "</div>"
    ]
   },
   {
@@ -259,8 +262,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Important note:</b> This tutorial is a brief introduction to XSPEC and its functionalities. It is prepared to understand basics of the software. The methods described here are not exhaustive and definitely requires better implementation for a more accurate and precise analysis.\n",
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "<b>References used to prepare this tutorial:</b> \n",
+    "<br>1. https://heasarc.gsfc.nasa.gov/docs/xanadu/xspec/manual/index.html\n",
+    "<br>2. https://indico.ict.inaf.it/event/1365/attachments/4062/8504/vignali_xspec_tutorial_2020.pdf\n",
     "</div>"
    ]
   }
