eSASS: Flare filtering finished

--- a/eROSITA_eSASS_Tutorials/01_Introduction_and_Setup.ipynb
+++ b/eROSITA_eSASS_Tutorials/01_Introduction_and_Setup.ipynb
@@ -17,8 +17,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 1: Input & setup"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,17 +33,17 @@
     "import subprocess\n",
     "import numpy as np\n",
     "from astropy.io import fits\n",
-    "# from astropy.convolution import Gaussian2DKernel, convolve_fft\n",
     "import matplotlib.pyplot as plt\n",
-    "# from astropy.visualization import make_lupton_rgb\n",
     "from scipy.optimize import curve_fit\n",
     "import os\n",
-    "from tqdm import tqdm"
+    "from tqdm import tqdm\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,27 +52,21 @@
     "plt.rc('ytick', direction='in', right=True)\n",
     "plt.rc('axes', linewidth=1.15)\n",
     "\n",
-    "# size = 13\n",
-    "plt.rc(\"mathtext\", fontset=\"dejavuserif\")\n",
-    "# plt.rc('font', family='DejaVu Serif', size=size)"
+    "plt.rc(\"mathtext\", fontset=\"dejavuserif\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# prepare a list of event files for evtool to read\n",
-    "elist = glob.glob('Data/Raw_data/???/???/EXP_010/e?01_??????_020_EventList_c010.fits.gz')\n",
-    "with open('Data/crab.list','w') as f:\n",
-    "    for e in elist:\n",
-    "        f.write(f'{e}\\n')"
+    "elist = glob.glob('Data/Raw_data/???/???/EXP_010/e?01_??????_020_EventList_c010.fits.gz')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,26 +76,41 @@
     "if not os.path.exists('Data/Filtered_data/Lightcurves'):\n",
     "    os.system('mkdir Data/Filtered_data/Lightcurves')\n",
     "\n",
+    "if not os.path.exists('Data/Filtered_data/Merged'):\n",
+    "    os.system('mkdir Data/Filtered_data/Merged')\n",
+    "\n",
     "timebin='20'\n",
     "\n",
     "clean_list = np.empty(len(elist), dtype=object)\n",
     "lightcurve0_list = np.empty(len(elist), dtype=object)\n",
     "lightcurve_list = np.empty(len(elist), dtype=object)\n",
     "filtered_list = np.empty(len(elist), dtype=object)\n",
+    "\n",
     "for i in range(len(elist)):\n",
-    "    clean_list[i] = 'Data/Filtered_data/'+elist[i].split('/')[-1].replace('EventList_c010.fits.gz','c010_s01_CleanImage.fits')\n",
+    "    clean_list[i] = 'Data/Filtered_data/'+elist[i].split('/')[-1].replace('EventList_c010.fits.gz','c010_s01_CleanedEvents.fits')\n",
     "    lightcurve0_list[i] = 'Data/Filtered_data/Lightcurves/'+elist[i].split('/')[-1].replace('EventList_c010.fits.gz',f'c010_s02_LC0_tb{timebin}.fits')\n",
-    "    lightcurve_list[i] = 'Data/Filtered_data/'+elist[i].split('/')[-1].replace('EventList_c010.fits.gz',f'c010_s03_LC_tb{timebin}.fits')\n",
-    "    filtered_list[i] = 'Data/Filtered_data/'+elist[i].split('/')[-1].replace('EventList_c010.fits.gz','c010_s04_FlareFiltered.fits')"
+    "    lightcurve_list[i] = 'Data/Filtered_data/Lightcurves/'+elist[i].split('/')[-1].replace('EventList_c010.fits.gz',f'c010_s03_LC_tb{timebin}.fits')\n",
+    "    filtered_list[i] = 'Data/Filtered_data/'+elist[i].split('/')[-1].replace('EventList_c010.fits.gz','c010_s04_FlareFilteredEvents.fits')\n",
+    "\n",
+    "with open('Data/crab.list','w') as f:\n",
+    "    for e in filtered_list:\n",
+    "        f.write(f'{e}\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 2: Make clean Event list for all tiles"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def run_evtool(input_name, output_name, gti_type='GTI', flag_type='0xe00fff30', pattern='15', emin='0.2', emax='10.0', image='yes', log_file=None):\n",
+    "def run_evtool(input_name, output_name, gti_type='GTI', flag_type='0xe00fff30', pattern='15', emin='0.2', emax='10.0', image='no', events='yes', telid='1 2 3 4 5 6 7', log_file=None):\n",
     "    subprocess.run(['evtool', \n",
     "                    f'eventfiles={input_name}', \n",
     "                    f'outfile={output_name}', \n",
@@ -104,6 +120,8 @@
     "                    f'emin={emin}', \n",
     "                    f'emax={emax}',\n",
     "                    f'image={image}',\n",
+    "                    f'events={events}',\n",
+    "                    f'telid={telid}'\n",
     "                    ],\n",
     "                    stdout=log_file,\n",
     "                    stderr=log_file)\n",
@@ -119,14 +137,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:08<00:00,  2.21s/it]"
+      "  0%|          | 0/4 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4/4 [00:08<00:00,  2.07s/it]"
      ]
     },
     {
@@ -162,8 +187,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 3: Extract the lightcurve"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,21 +208,22 @@
     "                    f'lightcurve={output_lightcurve}',\n",
     "                    'write_mask=no',\n",
     "                    f'timebin={timebin}',\n",
-    "                    f'threshold={threshold}'],\n",
+    "                    f'threshold={threshold}'\n",
+    "                    ],\n",
     "                    stdout=log_file,\n",
     "                    stderr=log_file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:02<00:00,  1.96it/s]"
+      "100%|██████████| 4/4 [00:01<00:00,  2.02it/s]"
      ]
     },
     {
@@ -223,12 +256,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Flare filtering"
+    "## Step 4: Flare filtering"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,11 +286,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def threshold_lightcurve(input_data, image=False):\n",
+    "def threshold_lightcurve(input_data, image=False, output_dir='Data/Filtered_data/Lightcurves/'):\n",
     "    lightcurve = fits.open(input_data)\n",
     "    time = lightcurve[1].data['TIME']\n",
     "    rate = lightcurve[1].data['RATE']\n",
@@ -304,7 +337,7 @@
     "        ax[2].set_ylabel('Counts')\n",
     "        ax[2].legend()\n",
     "\n",
-    "        fig.savefig('Data/Filtered_data/Lightcurves/' + input_data.split('/')[-1].replace('.fits', '.png'), dpi=300)\n",
+    "        fig.savefig(output_dir + input_data.split('/')[-1].replace('.fits', '.png'), dpi=300)\n",
     "        plt.close(fig)  # Close the figure to avoid displaying it\n",
     "    \n",
     "    return upper_limit"
@@ -312,14 +345,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:01<00:00,  3.28it/s]\n"
+      "100%|██████████| 4/4 [00:01<00:00,  2.97it/s]\n"
      ]
     }
    ],
@@ -331,34 +364,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([1.32333336, 1.21836281, 1.27990402, 1.23849327])"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.32333336 1.21836281 1.27990402 1.23849327]\n"
+     ]
     }
    ],
    "source": [
-    "tile_thresholds"
+    "print(tile_thresholds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 5: Re-run `flaregti` with calculated thresholds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:01<00:00,  2.64it/s]"
+      "100%|██████████| 4/4 [00:01<00:00,  2.52it/s]"
      ]
     },
     {
@@ -388,15 +425,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 6: Re-run `evtool` using the new GTIs"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:08<00:00,  2.19s/it]"
+      "100%|██████████| 4/4 [00:02<00:00,  1.99it/s]"
      ]
     },
     {
@@ -417,86 +461,127 @@
    "source": [
     "with open('Data/Filtered_data/evtool_s04.log', 'w+') as log_file:    \n",
     "    for tile in tqdm(range(len(elist))):   \n",
-    "        run_evtool(elist[tile], filtered_list[tile], gti_type=\"FLAREGTI\", log_file=log_file)\n",
+    "        run_evtool(clean_list[tile], filtered_list[tile], gti_type=\"FLAREGTI\", log_file=log_file)\n",
     "\n",
     "    log_file.seek(0)\n",
     "    log_content = log_file.readlines()\n",
     "    evtool_count = sum(1 for line in log_content if 'evtool: DONE' in line)\n",
-    "    print(f'evtool finished successfully for {evtool_count} out of {len(elist)} files ({evtool_count/len(elist)*100}%)')"
+    "    print(f'evtool finished successfully for {evtool_count} out of {len(clean_list)} files ({evtool_count/len(clean_list)*100}%)')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "proof_check = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 6.1: Proof check for the flare filtering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if proof_check:\n",
+    "    if not os.path.exists('Data/Filtered_data/Lightcurves/Proof_check'):\n",
+    "        os.system('mkdir Data/Filtered_data/Lightcurves/Proof_check')\n",
+    "\n",
+    "    pc_lightcurve_list = np.empty(len(elist), dtype=object)\n",
+    "\n",
+    "    for i in range(len(filtered_list)):\n",
+    "        pc_lightcurve_list[i] = 'Data/Filtered_data/Lightcurves/Proof_check/'+filtered_list[i].split('/')[-1].replace('s04_FlareFilteredEvents.fits',f's041_pcLC_tb{timebin}.fits')\n",
+    "\n",
+    "    with open('Data/Filtered_data/Lightcurves/Proof_check/flaregti_s041.log', 'w+') as log_file:\n",
+    "        for tile in tqdm(range(len(elist))):   \n",
+    "            run_flaregti(filtered_list[tile], pc_lightcurve_list[tile], log_file=log_file)\n",
+    "        \n",
+    "        log_file.seek(0)\n",
+    "        log_content = log_file.readlines()\n",
+    "        flaregti_count = sum(1 for line in log_content if 'flaregti: DONE' in line)\n",
+    "        print(f'flaregti finished successfully for {flaregti_count} out of {len(elist)} files ({flaregti_count/len(elist)*100}%)')\n",
+    "\n",
+    "    for tile in tqdm(range(len(pc_lightcurve_list))):   \n",
+    "        threshold_lightcurve(pc_lightcurve_list[tile], image=True, output_dir='Data/Filtered_data/Lightcurves/Proof_check/')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 7: Combine the tiles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('Data/Filtered_data/Merged/merged_evtool_s05.log', 'w+') as log_file:    \n",
+    "    run_evtool('@Data/crab.list', 'Data/Filtered_data/Merged/Merged_020_s05_TM0_Events.fits', gti_type=\"FLAREGTI\", log_file=log_file)\n",
+    "    center_ra = '83.63240'\n",
+    "    center_dec = '22.01740'\n",
+    "    run_radec2xy('Data/Filtered_data/Merged/Merged_020_s05_Events.fits', center_ra, center_dec, log_file=log_file)\n",
+    "\n",
+    "    log_file.seek(0)\n",
+    "    log_content = log_file.readlines()\n",
+    "    evtool_count = sum(1 for line in log_content if 'evtool: DONE' in line)\n",
+    "    radec2xy_count = sum(1 for line in log_content if 'radec2xy: DONE' in line)\n",
+    "    if evtool_count == 1 and radec2xy_count == 1:\n",
+    "        print('Merged tiles eventlist successfully')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 7.1: Separate the merged event list into individual TM"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 7/7 [00:01<00:00,  6.74it/s]\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " flaregti: 1.26.2 eSASS4DR1 Feb 16 11:30:44 2024\n",
-      " flaregti/flaregti_main: Sky pixel range for flare screening:\n",
-      " flaregti/flaregti_main:  XMIN=-108000 XMAX= 108000 YMIN=-108000 YMAX= 108000\n",
-      " flaregti/flaregti_main: Image size for point source removal:\n",
-      " flaregti/flaregti_main:  XSIZE=  180 YSIZE=  180\n",
-      " flaregti/flaregti_main: Source detection iteration  1\n",
-      " flaregti/flaregti_main:  evtfile_mk_image done\n",
-      " flaregti/flaregti_main:  mk_mask done\n",
-      " flaregti/flaregti_main:  evtfile_prep_attitude done\n",
-      " flaregti/flaregti_main:  evtfile_mk_lightcrv done\n",
-      " flaregti/flaregti_main:  mk_area done\n",
-      " flaregti/flaregti_main:  rate calculation done\n",
-      " flaregti/flaregti_main:  mk_thresh done\n",
-      " flaregti/flaregti_main:  mk_common_flaregti done\n",
-      " flaregti/flaregti_main:  merge_flaregti done\n",
-      " flaregti/flaregti_main: Source detection iteration  2\n",
-      " flaregti/flaregti_main:  evtfile_mk_image done\n",
-      " flaregti/flaregti_main:  mk_mask done\n",
-      " flaregti/flaregti_main:  evtfile_prep_attitude done\n",
-      " flaregti/flaregti_main:  evtfile_mk_lightcrv done\n",
-      " flaregti/flaregti_main:  mk_area done\n",
-      " flaregti/flaregti_main:  rate calculation done\n",
-      " flaregti/flaregti_main:  mk_thresh done\n",
-      " flaregti/flaregti_main:  mk_common_flaregti done\n",
-      " flaregti/flaregti_main:  merge_flaregti done\n",
-      " flaregti/flaregti_main: Source detection iteration  3\n",
-      " flaregti/flaregti_main:  evtfile_mk_image done\n",
-      " flaregti/flaregti_main:  mk_mask done\n",
-      " flaregti/flaregti_main:  evtfile_prep_attitude done\n",
-      " flaregti/flaregti_main:  evtfile_mk_lightcrv done\n",
-      " flaregti/flaregti_main:  mk_area done\n",
-      " flaregti/flaregti_main:  rate calculation done\n",
-      " flaregti/flaregti_main:  mk_thresh done\n",
-      " flaregti/flaregti_main:  mk_common_flaregti done\n",
-      " flaregti/flaregti_main:  merge_flaregti done\n",
-      " flaregti/flaregti_main: write_lightcurve done\n",
-      " flaregti/flaregti_main: update_flaregti done\n",
-      " flaregti: DONE\n"
+      "evtool successfully separted file into 9 files for 9 TMs (100.0%)\n"
      ]
     }
    ],
    "source": [
-    "run_flaregti(filtered_list[0], 'test.fits')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.3213340863426353"
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "threshold_lightcurve('test.fits', image=True)"
+    "TM_list = np.array([1,2,3,4,5,6,7])\n",
+    "\n",
+    "with open('Data/Filtered_data/Merged/separate_TM_evtool_s05.log', 'w+') as log_file:\n",
+    "    for i in tqdm(range(len(TM_list))):\n",
+    "        run_evtool('Data/Filtered_data/Merged/Merged_020_s05_TM0_Events.fits', f'Data/Filtered_data/Merged/Merged_{TM_list[i]}20_s05_TM{TM_list[i]}_Events.fits', telid=f'{TM_list[i]}', log_file=log_file)\n",
+    "\n",
+    "    run_evtool('Data/Filtered_data/Merged/Merged_020_s05_TM0_Events.fits', 'Data/Filtered_data/Merged/Merged_820_s05_TM8_Events.fits', telid='1 2 3 4 6', log_file=log_file)\n",
+    "\n",
+    "    run_evtool('Data/Filtered_data/Merged/Merged_020_s05_TM0_Events.fits', 'Data/Filtered_data/Merged/Merged_920_s05_TM9_Events.fits', telid='5 7', log_file=log_file)\n",
+    "\n",
+    "    log_file.seek(0)\n",
+    "    log_content = log_file.readlines()\n",
+    "    evtool_count = sum(1 for line in log_content if 'evtool: DONE' in line)\n",
+    "    print(f'evtool successfully separted file into {evtool_count} files for {len(TM_list)+2} TMs ({evtool_count/(len(TM_list)+2)*100}%)')"
    ]
   }
  ],
