eSASS: minor updates

--- a/eROSITA_eSASS_Tutorials/01_Introduction_and_Setup.ipynb
+++ b/eROSITA_eSASS_Tutorials/01_Introduction_and_Setup.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,21 +137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/4 [00:00<?, ?it/s]"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 4/4 [00:08<00:00,  2.07s/it]"
+      "100%|██████████| 4/4 [00:08<00:00,  2.12s/it]"
      ]
     },
     {
@@ -195,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,14 +209,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:01<00:00,  2.02it/s]"
+      "100%|██████████| 4/4 [00:02<00:00,  1.57it/s]"
      ]
     },
     {
@@ -286,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,14 +338,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:01<00:00,  2.97it/s]\n"
+      "  0%|          | 0/4 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 4/4 [00:01<00:00,  2.37it/s]\n"
      ]
     }
    ],
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -388,14 +388,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:01<00:00,  2.52it/s]"
+      "100%|██████████| 4/4 [00:01<00:00,  2.48it/s]"
      ]
     },
     {
@@ -433,14 +433,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 4/4 [00:02<00:00,  1.99it/s]"
+      "100%|██████████| 4/4 [00:02<00:00,  1.74it/s]"
      ]
     },
     {
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,15 +522,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Merged tiles eventlist successfully\n"
+     ]
+    }
+   ],
    "source": [
     "with open('Data/Filtered_data/Merged/merged_evtool_s05.log', 'w+') as log_file:    \n",
     "    run_evtool('@Data/crab.list', 'Data/Filtered_data/Merged/Merged_020_s05_TM0_Events.fits', gti_type=\"FLAREGTI\", log_file=log_file)\n",
     "    center_ra = '83.63240'\n",
     "    center_dec = '22.01740'\n",
-    "    run_radec2xy('Data/Filtered_data/Merged/Merged_020_s05_Events.fits', center_ra, center_dec, log_file=log_file)\n",
+    "    run_radec2xy('Data/Filtered_data/Merged/Merged_020_s05_TM0_Events.fits', center_ra, center_dec, log_file=log_file)\n",
     "\n",
     "    log_file.seek(0)\n",
     "    log_content = log_file.readlines()\n",
