eSASS: Created script for Image creation and minor changes to the tutorial notebook

--- a/eROSITA_eSASS_Tutorials/Imaging/02_Imaging_tutorial.ipynb
+++ b/eROSITA_eSASS_Tutorials/Imaging/02_Imaging_tutorial.ipynb
@@ -70,8 +70,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "band_min = 0.2\n",
-    "band_max = 2.3"
+    "band_min = 200\n",
+    "band_max = 2300"
    ]
   },
   {
@@ -119,15 +119,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "run_evtool(event_file, f'../Data/Images/merged_image_{int(band_min*1000)}_{int(band_max*1000)}.fits', \n",
-    "           band_min, band_max, log_file=open(f'../Data/Images/merged_image_{int(band_min*1000)}_{int(band_max*1000)}.log', 'w+'))\n",
-    "run_expmap(event_file, f'../Data/Images/merged_image_{int(band_min*1000)}_{int(band_max*1000)}.fits', \n",
-    "           f'../Data/Images/merged_expmap_{int(band_min*1000)}_{int(band_max*1000)}.fits', \n",
-    "           band_min, band_max, log_file=open(f'../Data/Images/merged_expmap_{int(band_min*1000)}_{int(band_max*1000)}.log', 'w+'))"
+    "run_evtool(event_file, f'../Data/Images/merged_image_{int(band_min)}_{int(band_max)}.fits', \n",
+    "           band_min/1000, band_max/1000, log_file=open(f'../Data/Images/merged_image_{int(band_min)}_{int(band_max)}.log', 'w+'))\n",
+    "\n",
+    "run_expmap(event_file, f'../Data/Images/merged_image_{int(band_min)}_{int(band_max)}.fits', \n",
+    "           f'../Data/Images/merged_expmap_{int(band_min)}_{int(band_max)}.fits', \n",
+    "           band_min/1000, band_max/1000, log_file=open(f'../Data/Images/merged_expmap_{int(band_min)}_{int(band_max)}.log', 'w+'))"
    ]
   },
   {
@@ -159,9 +160,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_corr(f'../Data/Images/merged_image_{int(band_min*1000)}_{int(band_max*1000)}.fits',\n",
-    "         f'../Data/Images/merged_expmap_{int(band_min*1000)}_{int(band_max*1000)}.fits',\n",
-    "         f'../Data/Images/merged_exp_corr_{int(band_min*1000)}_{int(band_max*1000)}.fits')"
+    "exp_corr(f'../Data/Images/merged_image_{int(band_min)}_{int(band_max)}.fits',\n",
+    "         f'../Data/Images/merged_expmap_{int(band_min)}_{int(band_max)}.fits',\n",
+    "         f'../Data/Images/merged_exp_corr_{int(band_min)}_{int(band_max)}.fits')"
    ]
   },
   {
@@ -177,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "image = fits.open(f'../Data/Images/merged_exp_corr_{int(band_min*1000)}_{int(band_max*1000)}.fits')[0]\n",
+    "image = fits.open(f'../Data/Images/merged_exp_corr_{int(band_min)}_{int(band_max)}.fits')[0]\n",
     "image_wcs = wcs.WCS(image.header)"
    ]
   },
@@ -300,7 +301,6 @@
    "source": [
     "output = Output()\n",
     "\n",
-    "# Initialize image and image_wcs to None\n",
     "image = None\n",
     "image_wcs = None\n",
     "\n",
@@ -308,7 +308,7 @@
     "    global image, image_wcs, ra_min, ra_max, dec_min, dec_max, data_min, data_max\n",
     "\n",
     "    with output:\n",
-    "        output.clear_output()  # Clear previous output\n",
+    "        output.clear_output()\n",
     "        \n",
     "        uploaded_file = list(change['new'].values())[0]\n",
     "        file_content = uploaded_file['content']\n",
@@ -455,6 +455,13 @@
     "                          )\n",
     "\n",
     "plot_image(smo_rgb, image_wcs, 83.4, 83.9, 21.8, 22.3, smooth=False, sigma=0, cmap=None)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Step 5.1: Optional sliders for RGB Images"
    ]
   },
   {
